--- a/frontendProgReqs/src/index.css
+++ b/frontendProgReqs/src/index.css
@@ -1,16 +1,13 @@
-@font-face {
-    font-family: 'Asap';
-    font-weight: 400;
-    src: url('./../assets/PlaypenSans-Regular.ttf') format('truetype');
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-@font-face {
-    font-family: 'Asap';
-    font-weight: 700;
-    src: url('./../assets/PlaypenSans-Bold.ttf') format('truetype');
-}
-
-button {
-    font-family: 'Asap', sans-serif;
-    font-size: 16px;
-}
+@layer utilities {
+    .animation-delay-2000 {
+      animation-delay: 2s;
+    }
+    .animation-delay-4000 {
+      animation-delay: 4s;
+    }
+  }
+  
